--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Batalha Naval Multiplayer</title>
+    <title>Senhores dos Mares</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
@@ -12,7 +12,7 @@
         <!-- Tela de Login -->
         <div id="login-screen" class="screen active">
             <div class="login-container">
-                <h1>🚢 Batalha Naval</h1>
+                <h1>🚢 Senhores dos Mares</h1>
                 <p>Conecte-se para jogar com outros jogadores na rede local</p>
                 <div class="input-group">
                     <input type="text" id="player-name" placeholder="Seu nome no jogo" maxlength="20">
@@ -24,7 +24,7 @@
         <!-- Lobby -->
         <div id="lobby-screen" class="screen">
             <header>
-                <h1>🚢 Batalha Naval</h1>
+                <h1>🚢 Senhores dos Mares</h1>
                 <div class="user-info">
                     <span id="current-user-name"></span>
                     <button id="logout-btn">Sair</button>
